# tubes-CVlanjut

./: .gitignore  README.md  pyproject.toml  run_inference_demo.sh  run_inference_demo_hd_clean.sh  run_test_demo.sh  run_train_demo.sh  test.py  train.py
.streamlit/: config.toml
apps/: streamlit_app.py
datasets/: dataset.py
models/: DocSAM.py
models/mask2former/: modeling_mask2former.py
scripts/: nohup_run_test.sh  nohup_run_train.sh  run_streamlit_app.sh
